--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=
 spring.jpa.hibernate.naming.implicit-strategy=
 spring.jpa.hibernate.naming.physical-strategy=
 spring.jpa.properties.hibernate.dialect=
+server.servlet.contextPath=
