--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.testWhileIdle=
-spring.datasource.validationQuery=
-spring.jpa.show-sql=
-spring.jpa.hibernate.ddl-auto=
-spring.jpa.hibernate.naming.implicit-strategy=
-spring.jpa.hibernate.naming.physical-strategy=
-spring.jpa.properties.hibernate.dialect=
-server.servlet.contextPath=
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+server.servlet.contextPath=/api
